--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,59 @@ html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
+/* 
+    HEADER
+*/
+
+.container .header {
+    display: flex;
+    justify-content: center;
+
+}
+
+/* 
+  SEZIONE HEADER TOP
+*/
+.header-top {
+    min-height: 50px;
+    background-color: #ADD8E6 ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.top {
+    background-color: #B48A20;
+    border: 1px dashed black;
+    width: 400px;
+    padding: 5px;
+    height: 30px;
+}
+
+.link {
+    text-align: center;
+}
+
+.login {
+    text-align: end;
+}
+
+/* 
+  SEZIONE HEADER BOTTOM
+*/
+
+.header-bottom {
+    min-height: 300px;
+    background-color: rgb(0, 0, 185);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-bottom {
+    width: calc(100% / 2);
+    height: 200px;
+    background-color:#EE82EE ;
+    border: 2px dashed red;
 }
