--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,18 @@ html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.modulo {           
+    min-height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;         
+}
+
+.box {
+    border: 2px dashed black;
+    height: 300px;
+}
+
 /* 
     HEADER
 */
@@ -33,7 +45,6 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .top {
@@ -69,4 +80,41 @@ html {
     height: 200px;
     background-color:#EE82EE ;
     border: 2px dashed red;
+}
+
+/* 
+    INIZIO MAIN
+*/
+/* MODULO PARI */
+
+.pari {
+    background-color: rgb(212, 212, 212);
+}
+
+.blue {
+    width: calc(100% / 2);
+    background-color: #1E90FF;
+}
+
+.pink {
+    width: calc(100% / 4);
+    background-color: lightcoral;
+}
+
+/* MODULO DISPARI */
+
+.dispari {
+    background-color: white;
+    flex-direction: row-reverse;
+}
+
+/* 
+   GREEN BOX
+*/
+
+.green {
+    margin: 20px;
+    width: calc(100% / 2 + (100% / 4));
+    height: 700px;
+    background-color: #228B22;
 }
