--- a/css/style.css
+++ b/css/style.css
@@ -113,8 +113,76 @@ html {
 */
 
 .green {
-    margin: 20px;
+    margin: 30px;
     width: calc(100% / 2 + (100% / 4));
     height: 700px;
     background-color: #228B22;
+}
+
+
+/*
+    FOOTER
+*/
+
+/* 
+    ALBUM
+*/
+.container-album {
+    min-height: 300px;
+    background-color: rgb(73, 79, 85);
+    padding: 20px 0;
+}
+
+.album {
+    background-color:rgb(129, 110, 110);
+    border: 2px black dashed;
+    width: 75%;
+    height: 300px;
+    margin: 0 auto;
+    display: flex;
+}
+
+.left-side {
+    background-color:#F08080 ;
+    width: calc((100% / 6) * 2 );
+    border: 2px black dashed;
+}
+
+.right-side {
+    background-color:#20B2AA ;
+    width: calc(100% / 6);
+    border: 2px white dashed;
+}
+
+/* 
+    FONDO PAGINA
+*/
+
+.container-fondo-pagina {
+    background-color: rgb(73, 79, 85);
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    border-top: 1px solid white;
+}
+
+.fondo-pagina {
+    background-color: aqua;
+    width: 80%;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo-end {
+    padding: 0 20px;
+    border: 2px dashed black;
+    background-color: coral;
+}
+
+.button-end {
+    padding: 0 20px;
+    border: 2px dashed black;
+    background-color: coral;
 }
