--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,89 @@ html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+header, main, footer {
+    background-color: #536053;
+}
+
+.container {
+    max-width: 1000px;
+    min-height: 500px;
+    margin: 0 auto;
+}
+
+
+
+/* 
+    HEADER
+*/
+
+/* 
+  SEZIONE HEADER TOP
+*/
+.header {
+    background-color: #ADD8E6;
+    display: flex;
+    justify-content: center;
+}
+
+.top {
+    background-color: #B48A20;
+    border: 1px dashed black;
+    width: 80%;
+    height: 40px;
+    margin: 20px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.logo {
+    text-align: left;
+    width: calc(80% / 6);
+}
+
+.link {
+    text-align: center;
+    width: calc((80% / 6) *3);
+    list-style-type: none;
+}
+
+.login {
+    text-align: end;
+    width: calc(80% / 6);
+}
+
+.link a {
+    text-decoration: none;
+    padding: 0 30px;
+}
+
+/* 
+  SEZIONE HEADER BOTTOM
+*/
+
+.header-bottom {
+    min-height: 500px;
+    background-color: rgb(0, 0, 185);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-bottom {
+    width: calc(100% / 2);
+    height: 400px;
+    background-color:#EE82EE ;
+    border: 2px dashed red;
+}
+
+/* 
+    INIZIO MAIN
+*/
+
+/* MODULO SCURO */
+
 .modulo {           
     min-height: 500px;
     display: flex;
@@ -24,71 +107,13 @@ html {
 .box {
     border: 2px dashed black;
     height: 300px;
-}
-
-/* 
-    HEADER
-*/
-
-.container .header {
-    display: flex;
-    justify-content: center;
-
-}
-
-/* 
-  SEZIONE HEADER TOP
-*/
-.header-top {
-    min-height: 50px;
-    background-color: #ADD8E6 ;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.top {
-    background-color: #B48A20;
-    border: 1px dashed black;
-    width: 400px;
-    padding: 5px;
-    height: 30px;
-}
-
-.link {
-    text-align: center;
-}
-
-.login {
-    text-align: end;
-}
-
-/* 
-  SEZIONE HEADER BOTTOM
-*/
-
-.header-bottom {
-    min-height: 300px;
-    background-color: rgb(0, 0, 185);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.section-bottom {
-    width: calc(100% / 2);
-    height: 200px;
-    background-color:#EE82EE ;
-    border: 2px dashed red;
-}
-
-/* 
-    INIZIO MAIN
-*/
-/* MODULO PARI */
-
-.scuro {
-    background-color: rgb(212, 212, 212);
+.chiaro {
+    background-color: white;
 }
 
 .blue {
@@ -101,10 +126,10 @@ html {
     background-color: lightcoral;
 }
 
-/* MODULO DISPARI */
+/* MODULO CHIARO */
 
-.chiaro {
-    background-color: white;
+.scuro {
+    background-color: rgb(207, 207, 207);
     flex-direction: row-reverse;
 }
 
@@ -113,9 +138,9 @@ html {
 */
 
 .green {
-    margin: 30px;
-    width: calc(100% / 2 + (100% / 4));
-    height: 700px;
+    margin: 50px;
+    width: 75%;
+    height: 600px;
     background-color: #228B22;
 }
 
@@ -124,65 +149,54 @@ html {
     FOOTER
 */
 
-/* 
-    ALBUM
-*/
-.container-album {
-    min-height: 300px;
-    background-color: rgb(73, 79, 85);
-    padding: 20px 0;
+.footer {
+    background-color: rgb(63, 63, 63);
+    padding-top: 20px;
 }
 
-.album {
-    background-color:rgb(129, 110, 110);
-    border: 2px black dashed;
+.row-top-footer {
     width: 75%;
-    height: 300px;
+    height: 400px;
+    background-color: #ADD8E6;
     margin: 0 auto;
+    border: 2px dashed black;
     display: flex;
 }
 
-.left-side {
-    background-color:#F08080 ;
-    width: calc((100% / 6) * 2 );
-    border: 2px black dashed;
+.col-1-footer-top {
+    width: calc((100% / 6) * 2);
+    height: 100%;
+    background-color: coral;
+    border: 2px dashed black;
 }
 
-.right-side {
-    background-color:#20B2AA ;
-    width: calc(100% / 6);
-    border: 2px white dashed;
+.col-2-footer-top {
+    width: calc(100% /6);
+    height: 100%;
+    background-color: rgb(77, 223, 223);
+    border: 2px dashed white;
 }
 
-/* 
-    FONDO PAGINA
-*/
+hr {
+    margin: 20px 0;
+    height: 3px;
+    background-color: white;
+}
 
-.container-fondo-pagina {
-    background-color: rgb(73, 79, 85);
-    height: 100px;
+.row-bottom-footer {
+    width: 75%;
+    height: 40px;
+    background-color: aquamarine;
+    margin: 0 auto;
+    border: 2px dashed black;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
-    border-top: 1px solid white;
-}
-
-.fondo-pagina {
-    background-color: aqua;
-    width: 80%;
-    padding: 20px;
-    display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
-.logo-end {
-    padding: 0 20px;
-    border: 2px dashed black;
-    background-color: coral;
-}
-
-.button-end {
-    padding: 0 20px;
-    border: 2px dashed black;
-    background-color: coral;
+.bottone {
+    padding: 5px;
+    margin: 0 5px;
+    background-color: lightcoral;
 }
